# DenseMonoSLAM

./: .gitmodules  LICENSE  README.md
elasticfusion/: README.md
elasticfusion/Core/src/: CMakeLists.txt  Context.h  Deformation.cpp  Deformation.h  ElasticFusion.cpp  ElasticFusion.h  Ferns.cpp  Ferns.h  GlobalModel.cpp  GlobalModel.h  IndexMap.cpp  IndexMap.h  KeyFrame.h  MutualInformation.cpp  MutualInformation.h  PoseMatch.h  ReferenceFrame.h
elasticfusion/Core/src/Cuda/: cudafuncs.cu  cudafuncs.cuh  reduce.cu  types.cuh
elasticfusion/Core/src/Cuda/containers/: device_memory.cpp
elasticfusion/Core/src/Cuda/merging/: merge.cu  merge.cuh
elasticfusion/Core/src/Shaders/: ComputePack.cpp  ComputePack.h  FeedbackBuffer.cpp  FeedbackBuffer.h  Uniform.h  Vertex.cpp  Vertex.h  combo_splat.frag  consume.vert  copy_unstable.geom  copy_unstable.vert  data.frag  data.geom  data.vert  depth_bilateral.frag  depth_metric.frag  depth_norm.frag  depth_splat.frag  draw_feedback.frag  draw_feedback.vert  draw_global_surface.frag  draw_global_surface.geom  draw_global_surface.vert  draw_global_surface_phong.frag  empty.vert  fill_normal.frag  fill_rgb.frag  fill_vertex.frag  fxaa.frag  index_map.frag  index_map.vert  init_unstable.vert  project_normal_point.geom  project_normal_point.vert  quad.geom  resize.frag  sample.geom  sample.vert  sample_normal_point.geom  sample_normal_point.vert  (+6 more)
elasticfusion/Core/src/Utils/: DeformationGraph.cpp  DeformationGraph.h  FGROdometry.cpp  FGROdometry.h  GPUConfig.h  GraphNode.h  Img.h  Options.h  Parse.cpp  Parse.h  RGBDOdometry.cpp  RGBDOdometry.h  Stats.h  Stopwatch.h
elasticfusion/GPUTest/src/: CMakeLists.txt  GPUTest.cpp
elasticfusion/GUI/src/: CMakeLists.txt  FindORBSLAM3.cmake  Findonnxruntime.cmake  MainController.cpp  MainController.h
elasticfusion/GUI/src/Tools/: CameraInterface.h  CircularBuffer.h  DepthPrediction.cpp  DepthPrediction.h  GUI.h  GroundTruthClusters.cpp  GroundTruthClusters.h  GroundTruthOdometry.cpp  GroundTruthOdometry.h  LcmHandler.h  LiveLcmLogReader.cpp  LiveLcmLogReader.h  LiveLogReader.cpp  LiveLogReader.h  LogReader.h  MultiCameraManager.h  MultiCameraManagerFactory.h  MultiLiveCameraManager.h  MultiLogCameraManager.h  MultiMixedCameraManager.h  MultiUsbCameraManager.h  OpenNI2Interface.cpp  OpenNI2Interface.h  RawLcmLogReader.h  RawLogReader.cpp  RealSenseInterface.cpp  RealSenseInterface.h  concurrent_queue.h
elasticfusion/GUI/src/Tools/lcmtypes/: Frame.lcm
elasticfusion/GUI/src/Tools/networking/: LcmReceiver.cpp  LcmReceiver.h
logs/kitti/: KITTI_RGBD_template_params.yaml  kitti_odom_to_lcm.py
logs/kitti/eflcm/: Frame.java
logs/rgbd/: CMakeLists.txt  Freiburg.cpp  FreiburgLcm.cpp  JPEGLoader.h  KlgToLcm.cpp  LogReader.h  RawLogReader.cpp  RawLogReader.h  iclnuimTolcm.py  lcm
logs/rgbd/eflcm/: Frame.py
logs/rgbd/lcmtypes/eflcm/: __init__.py
logs/rgbd/lcmtypes/eflcm.bk/: Frame.hpp
